jf;lsdn;fsdf;ljv;md;gjdf

--- a/src/asstes/css/variables.scss
+++ b/src/asstes/css/variables.scss
@@ -10,6 +10,7 @@ $background-color_1: white;
 $blackColor:#37343A;
 $pinkColor:#F9447F;
 $yellowColor:#DDE468;
+$whiteColor:#FFFBFB;
 
 @font-face {
 	font-family: 'SocialMediaFont';
