--- a/src/components/Services/services.scss
+++ b/src/components/Services/services.scss
@@ -1,92 +1,147 @@
-$color_1: #222;
-$color_2: #fff;
-$color_3: #666;
-$font-family_1: 'Jost', sans-serif;
 
-.services-container{
-    display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-    .container-row {
-        display: flex;
+@use '../../asstes/css/variables.scss' as helpers;
 
-    }
-	.container-row.reverse-row {
-		flex-direction: row-reverse;
+
+.home-services {
+	max-width: 1280px;
+	padding: 80px 0%;
+  
+	&-title {
+	  display: flex;
+	  align-items: center;
+	  margin-bottom: 30px;
+  
+	  img {
+		width: 64px;
+		height: 64px;
+	  }
+  
+	  h1 {
+		font-size: 50px;
+		color: #37343A;
+		font-weight: 900;
+	  }
 	}
-}
-
-.services {
-	.img {
-		position: relative;
-		overflow: hidden;
-	}
-	.content {
-		width: 100%;
-		padding: 30px;
-		.cont {
-			display: table-cell;
-			vertical-align: middle;
-			h4 {
-				margin: 0 0 10px 0;
-				font-size: 32px;
-				color: $color_1;
-				font-weight: 400;
-				line-height: 1.5em;
-			}
+  
+	&-main-container {
+	  display: flex;
+	  justify-content: center;
+	  width: 100%;
+  
+	  >div {
+		width: 30%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+  
+		p {
+		  text-align: center;
 		}
-	}
-}
-.bg-cream {
-	background: #f8f5f0;
-	width: 50%;
-}
-.animate-boxX {
-	width: 50%;
-}
-.img {
-	>img {
-		width: 100%;
-		transition: all 1s ease;
-		&:hover {
-			transform: scale(1.09, 1.09);
+  
+		h6 {
+		  font-size: 24px;
+		  color: #37343A;
 		}
+  
+		.spacer {
+		  height: 40px;
+		  width: 2px;
+		  background-color: helpers.$pinkColor;
+		  margin: 10px 0;
+		}
+  
+		.spacer-yellow {
+		  height: 40px;
+		  width: 2px;
+		  background-color: #DDE468;
+		  margin: 10px 0;
+		}
+  
+		.big-yellow {
+		  width: 10vw;
+		  height: 10vw;
+		  background-color: #f1f2c1;
+		  display: flex;
+		  justify-content: center;
+		  align-items: center;
+		  border-radius: 100%;
+  
+		  .small-yellow {
+			width: 75%;
+			height: 75%;
+			border-radius: 100%;
+			background-color: #DDE468;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		  }
+		}
+  
+		.big-pink {
+		  width: 10vw;
+		  height: 10vw;
+		  background-color: #fdb2ca;
+		  display: flex;
+		  justify-content: center;
+		  align-items: center;
+		  border-radius: 100%;
+  
+		  .small-pink {
+			width: 75%;
+			height: 75%;
+			border-radius: 100%;
+			background-color: helpers.$pinkColor;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		  }
+		}
+  
+		.lamp {
+		  width: 50%;
+		}
+	  }
 	}
-}
-
-.cont {
-	p {
+  }
+  @media (max-width: 1350px) {
+	.home-services-main-container>div h6 {
+		font-size: 22px;
+	  }
+	
+	  .home-services-main-container>div p {
+		text-align: center;
 		font-size: 16px;
-		font-weight: 400;
-		line-height: 1.75em;
-		color: $color_3;
-		margin-bottom: 20px;
+	  }
 	}
-}
-
-
-@media (max-width: 1000px) {
-    .services-container{
-        display: block;
-                .container-row {
-            display: flex;
-            flex-direction: column;
-    
-        }
-        .animate-boxX{
-            width: 100%;
-        }
-        .bg-cream {
-            width: 100%;
-        }
-        .container-row {
-            display: flex;
-            flex-direction: column;
-    
-        }
-        .container-row.reverse-row {
-			flex-direction: column;
-        }
-
-    }
-}
+	@media (max-width: 1000px) {
+		.home-services {
+		  margin: 30px 0;
+	  
+		  &-title {
+			justify-content: center;
+			margin-bottom: 20px;
+	  
+			h1 {
+			  font-size: 50px;
+			}
+	  
+			img {
+			  width: 50px;
+			  height: 50px;
+			}
+		  }
+	  
+		}
+		.home-services-main-container {
+			flex-wrap: wrap;
+			gap: 2vw;
+		
+			>div {
+			  width: 48%;
+			}
+		
+			.reverse-col {
+			  flex-direction: column-reverse;
+			}
+		  }
+	}
