--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -1,5 +1,29 @@
 @use '../../asstes/css/variables.scss' as helpers;
-.home-page-section{    background-color: #FFFBFB;
+.home-page-contant-form{
+  width: 100%;
+  margin: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 1280px;
+
+  
+  >h1{
+    font-size: 54px;
+    background-color:helpers.$pinkColor ;
+    color: helpers.$whiteColor;
+    padding:20px 50px ;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  p{
+    text-align: center;
+  }
+}
+
+
+.home-page-section{    background-color: helpers.$whiteColor;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -119,7 +143,7 @@
 
   h1 {
     font-size: 54px;
-    color: #FFFBFB;
+    color: helpers.$whiteColor;
     text-transform: uppercase;
     font-weight: 900;
     margin: 30px 0;
@@ -144,7 +168,7 @@
       align-items: end;
 
       p {
-        color: #FFFBFB;
+        color: helpers.$whiteColor;
         text-align: end;
         font-size: 18px;
       }
@@ -157,7 +181,7 @@
 
     h3 {
       font-size: 44px;
-      color: #FFFBFB;
+      color: helpers.$whiteColor;
       font-weight: 800;
 
       strong {
@@ -172,7 +196,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background-color: #FFFBFB;
+  background-color: helpers.$whiteColor;
   max-width: 1280px;
 
   h1 {
@@ -229,7 +253,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        color: #FFFBFB;
+        color: helpers.$whiteColor;
       }
 
       h5 {
@@ -244,7 +268,7 @@
   border-bottom-left-radius: 50% 150px !important;
   border-bottom-right-radius: 50% 150px !important;
   width: 100%;
-  background-color: #FFFBFB;
+  background-color: helpers.$whiteColor;
   height: 54px;
 }
 
@@ -406,7 +430,7 @@
     h1 {
       font-size: 50px;
       line-height: 50px;
-      color: #FFFBFB;
+      color: helpers.$whiteColor;
     }
 
     h3 {
@@ -469,7 +493,7 @@
       font-size: 54px;
       font-weight: 800;
       line-height: 54px;
-      color: #FFFBFB;
+      color: helpers.$whiteColor;
       margin-right: 20px;
     }
 
@@ -521,7 +545,7 @@
   .why-tiktok {
     // h1 {
     //   font-size: 54px;
-    //   color: #FFFBFB;
+    //   color: helpers.$whiteColor;
     //   text-transform: uppercase;
     //   font-weight: 900;
 
@@ -675,7 +699,7 @@
 
   .why-tiktok h1 {
     font-size: 40px;
-    color: #FFFBFB;
+    color: helpers.$whiteColor;
     text-transform: uppercase;
     font-weight: 900;
   }
@@ -748,7 +772,7 @@
 
   .why-tiktok h1 {
     font-size: 40px;
-    color: #FFFBFB;
+    color: helpers.$whiteColor;
     text-transform: uppercase;
     font-weight: 900;
   }
@@ -757,7 +781,7 @@
 @media (max-width: 430px) {
   .why-tiktok h1 {
     font-size: 30px;
-    color: #FFFBFB;
+    color: helpers.$whiteColor;
     text-transform: uppercase;
     font-weight: 900;
   }
@@ -769,6 +793,15 @@
 }
 
 @media (max-width: 750px) {
+
+  .home-page-contant-form{
+    >h1{
+      font-size: 25px;
+    }
+    p{
+      text-align: center;
+    }
+  }
   .home-page-banner > div{
     padding: 30px 0;
   }
@@ -800,7 +833,7 @@
     .ring {
 
       background: helpers.$pinkColor;
-      color: #FFFBFB;
+      color: helpers.$whiteColor;
       width: 18px;
       height: 18px;
       border-radius: 100%;
