--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -6,6 +6,19 @@
     max-width: 1200px;
     display: flex;
     flex-direction: column;
+   
+    
+    .success-message{
+        display: flex;
+        align-self: center;
+        text-align: center;
+        background: helpers.$yellowColor;
+        padding: 30px;
+        margin: 30px 0;
+        font-size: 24px;
+        color: helpers.$blackColor;
+        font-weight: 500;
+    }
 }
 .form-button{
     width: 100%;
