--- a/src/components/Overlay/Overlay.module.scss
+++ b/src/components/Overlay/Overlay.module.scss
@@ -25,7 +25,7 @@
                 margin: 30px 20px 0 45px;
                 width: 45px;
                 height: 45px;
-                color: helpers.$mainColor;
+                color: helpers.$pinkColor;
             }
         }
     }
