--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -533,6 +533,7 @@ p{
         img{
           width: 18px;
           object-fit: contain;
+          margin-right: 3px
         }
         .play{
           width: 14px;
