--- a/src/components/TikTokComponentResults/TikTokComponentResults.scss
+++ b/src/components/TikTokComponentResults/TikTokComponentResults.scss
@@ -24,7 +24,7 @@
         height: 3vw;
       }
   
-      h1 {
+      .h1 {
         font-size: 54px;
         font-weight: 800;
         line-height: 54px;
@@ -76,7 +76,7 @@
   }
   @media (max-width: 750px) {
     .home-page-results .home-page-results-title{
-        h1 {
+        .h1 {
           font-size: 25px;
           margin-right: 5px
         }
