--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -10,13 +10,14 @@
   max-width: 1280px;
 
 
-  >h1 {
+  >.h1 {
     font-size: 54px;
     background-color: helpers.$pinkColor ;
     color: helpers.$whiteColor;
     padding: 20px 50px;
     margin-bottom: 30px;
     text-align: center;
+    font-weight: bold;
   }
 
   p {
@@ -152,7 +153,7 @@
   padding: 0 10% 80px;
   width: 100%;
 
-  h1 {
+  .h1 {
     font-size: 54px;
     color: helpers.$whiteColor;
     text-transform: uppercase;
@@ -210,7 +211,7 @@
   background-color: helpers.$whiteColor;
   max-width: 1280px;
 
-  h1 {
+  .h1 {
     color: #DDE468;
     font-size: 54px;
     font-weight: 900;
@@ -407,7 +408,7 @@
     align-items: center;
     justify-content: center;
 
-    h1 {
+    .h1 {
       font-size: 54px;
       font-weight: 900;
       color: helpers.$pinkColor;
@@ -437,9 +438,10 @@
     flex-direction: column;
     align-items: center;
 
-    h1 {
+    .h1 {
       font-size: 50px;
       line-height: 50px;
+      font-weight: bold;
       color: helpers.$whiteColor;
     }
 
@@ -465,7 +467,7 @@
     color: #37343A;
     margin: 40px 0;
 
-    h1 {
+    .h1 {
       font-size: 54px;
       font-weight: 900;
     }
@@ -588,19 +590,6 @@
   }
 
   .why-tiktok {
-    // h1 {
-    //   font-size: 54px;
-    //   color: helpers.$whiteColor;
-    //   text-transform: uppercase;
-    //   font-weight: 900;
-
-    //   strong {
-    //     color: #DDE468;
-    //     font-weight: 900;
-
-    //   }
-    // }
-
     .why-tiktok-inner-container {
       display: flex;
       width: 100%;
@@ -645,7 +634,7 @@
     font-size: 16px;
   }
 
-  .why-social-media>h4 h1 {
+  .why-social-media>h4 .h1 {
     font-size: 54px;
   }
 
@@ -653,19 +642,7 @@
     font-size: 37px;
   }
 
-  // .home-page-banner>div h1 {
-  //   font-size: 54px;
-  //   line-height: 54px;
-  // }
 
-  // .home-page-banner>div h3 {
-  //   font-size: 37px;
-  //   line-height: 37px;
-  // }
-
-  // .home-page-results .home-page-results-title h1 {
-  //   font-size: 50px;
-  // }
 
   .home-page-results .home-page-results-title h3 {
     font-size: 37px;
@@ -744,7 +721,7 @@
     text-align: center;
   }
 
-  .why-tiktok h1 {
+  .why-tiktok .h1 {
     font-size: 40px;
     color: helpers.$whiteColor;
     text-transform: uppercase;
@@ -773,7 +750,7 @@
 
   }
 
-  .short-form-container h1 {
+  .short-form-container .h1 {
     font-size: 50px;
   }
 
@@ -819,7 +796,7 @@
     margin-right: 10px;
   }
 
-  .why-tiktok h1 {
+  .why-tiktok .h1 {
     font-size: 40px;
     color: helpers.$whiteColor;
     text-transform: uppercase;
@@ -828,7 +805,7 @@
 }
 
 @media (max-width: 430px) {
-  .why-tiktok h1 {
+  .why-tiktok .h1 {
     font-size: 30px;
     color: helpers.$whiteColor;
     text-transform: uppercase;
@@ -862,7 +839,7 @@
   }
 
   .home-page-contant-form {
-    >h1 {
+    >.h1 {
       font-size: 25px;
     }
 
@@ -940,7 +917,7 @@
     }
   }
 
-  .short-form-container h1 {
+  .short-form-container .h1 {
     font-size: 25px;
     text-align: center;
   }
@@ -1020,8 +997,9 @@
     display: flex;
     flex-direction: column;
 
-    h1 {
+    .h1 {
       font-size: 25px;
+      font-weight: bold;
       text-align: center;
     }
   }
@@ -1040,7 +1018,7 @@
     }
   }
 
-  .home-page-banner>div h1 {
+  .home-page-banner>div .h1 {
     font-size: 22px;
     line-height: 22px;
   }
@@ -1051,7 +1029,7 @@
   }
 
   .home-page-brands .brands-title {
-    h1 {
+    .h1 {
       font-size: 25px;
     }
 
